[CW] many changes : added chapter, edited style-file, corrected mistakes

--- a/course_work_number_one/SCWorks.cls
+++ b/course_work_number_one/SCWorks.cls
@@ -46,7 +46,7 @@
 
 \def\napravlenie#1{\gdef\@napravlenie{#1}}\napravlenie{}
 
-\def\studenttitle#1{\gdef\@studenttitle{#1}}\studenttitle{\cyr\CYRS\cyrt%
+\def\studenttitle#1{\gdef\@studenttitle{#1}}\studenttitle{\cyr\cyrs\cyrt%
 \cyru\cyrd\cyre\cyrn\cyrt\cyra}
 
 
@@ -303,17 +303,18 @@
 \cyrn\cyri\cyrya\ \cyri\ \cyrn\cyra\cyru\cyrk\cyri\ \CYRR\cyro\cyrs\cyrs%
 \cyri\cyrishrt\cyrs\cyrk\cyro\cyrishrt\ \CYRF\cyre\cyrd\cyre\cyrr\cyra%
 \cyrc\cyri\cyri\\[14pt]
-\CYRF\CYRE\CYRD\CYRE\CYRR\CYRA\CYRL\CYRSFTSN\CYRN\CYRO\CYRE\ \CYRG\CYRO%
-\CYRS\CYRU\CYRD\CYRA\CYRR\CYRS\CYRT\CYRV\CYRE\CYRN\CYRN\CYRO\CYRE\ %
-\CYRB\CYRYU\CYRD\CYRZH\CYRE\CYRT\CYRN\CYRO\CYRE\ \CYRO\CYRB\CYRR\CYRA%
-\CYRZ\CYRO\CYRV\CYRA\CYRT\CYRE\CYRL\CYRSFTSN\CYRN\CYRO\CYRE\ \CYRU%
-\CYRCH\CYRR\CYRE\CYRZH\CYRD\CYRE\CYRN\CYRI\CYRE\\ \CYRV\CYRERY\CYRS%
-\CYRSH\CYRE\CYRG\CYRO\ \CYRP\CYRR\CYRO\CYRF\CYRE\CYRS\CYRS\CYRI\CYRO%
-\CYRN\CYRA\CYRL\CYRSFTSN\CYRN\CYRO\CYRG\CYRO\ \CYRO\CYRB\CYRR\CYRA\CYRZ%
-\CYRO\CYRV\CYRA\CYRN\CYRI\CYRYA\\
-<<\CYRS\CYRA\CYRR\CYRA\CYRT\CYRO\CYRV\CYRS\CYRK\CYRI\CYRISHRT\ \CYRG%
-\CYRO\CYRS\CYRU\CYRD\CYRA\CYRR\CYRS\CYRT\CYRV\CYRE\CYRN\CYRN\CYRERY%
-\CYRISHRT\ \CYRU\CYRN\CYRI\CYRV\CYRE\CYRR\CYRS\CYRI\CYRT\CYRE\CYRT\\ %
+\CYRF\CYRE\CYRD\CYRE\CYRR\CYRA\CYRL\CYRSFTSN\CYRN\CYRO\CYRE\ % federalnoe
+\CYRG\CYRO\CYRS\CYRU\CYRD\CYRA\CYRR\CYRS\CYRT\CYRV\CYRE\CYRN\CYRN\CYRO\CYRE\ % gossudarstvennoe
+\CYRB\CYRYU\CYRD\CYRZH\CYRE\CYRT\CYRN\CYRO\CYRE\ % budjetnoe
+\CYRO\CYRB\CYRR\CYRA\CYRZ\CYRO\CYRV\CYRA\CYRT\CYRE\CYRL\CYRSFTSN\CYRN\CYRO\CYRE\ % obrazovatelnoe
+\CYRU\CYRCH\CYRR\CYRE\CYRZH\CYRD\CYRE\CYRN\CYRI\CYRE\\ % uchrejdenie
+\CYRV\CYRERY\CYRS\CYRSH\CYRE\CYRG\CYRO\ % vishego
+%\CYRP\CYRR\CYRO\CYRF\CYRE\CYRS\CYRS\CYRI\CYRO\CYRN\CYRA\CYRL\CYRSFTSN\CYRN\CYRO\CYRG\CYRO\ % professionalnogo
+\CYRO\CYRB\CYRR\CYRA\CYRZ\CYRO\CYRV\CYRA\CYRN\CYRI\CYRYA\\ % obrazovania
+<<\CYRS\CYRA\CYRR\CYRA\CYRT\CYRO\CYRV\CYRS\CYRK\CYRI\CYRISHRT\ % saratovskii
+\CYRN\CYRA\CYRU\CYRCH\CYRN\CYRO-\CYRI\CYRS\CYRS\CYRL\CYRE\CYRD\CYRO\CYRV\CYRA\CYRT\CYRE\CYRL\CYRSFTSN\CYRS\CYRK\CYRI\CYRISHRT\
+\CYRG\CYRO\CYRS\CYRU\CYRD\CYRA\CYRR\CYRS\CYRT\CYRV\CYRE\CYRN\CYRN\CYRERY\CYRISHRT\ % gosudarstvennii
+\CYRU\CYRN\CYRI\CYRV\CYRE\CYRR\CYRS\CYRI\CYRT\CYRE\CYRT\\ % universitet
 \CYRI\CYRM\CYRE\CYRN\CYRI\ \CYRN.\CYRG. \CYRCH\CYRE\CYRR\CYRN\CYRERY%
 \CYRSH\CYRE\CYRV\CYRS\CYRK\CYRO\CYRG\CYRO>>\vspace{14pt}\\}}
 
