--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -28,45 +28,27 @@
 
 \author{Sharov Alex}
 
-
 \begin{document}
 
-\chair{дифференциальных уравнений и прикладной математики}
-
+\chair{теории вероятностей, математической статистики и управления стохастическими процессами}
 \worktitle{Квадратичные формы и их приложения}
-
 \course{2}
-
-\department{Механико-математического факультета}
-
+\department{механико-математического факультета}
 \group{213}
-
 \napravlenie{01.03.02 Прикладная математика и информатика}
-
-
 \studentName{Шарова Александра Вадимовича}
 
-\chtitle{} 
-\chname{}  
-
-\satitle{} 
-\saname{}  
-
+\satitle{к.ф-м.н., доцент} 
+\saname{Смирнов А.К.}
+\chtitle{д.ф-м.н., доцент} 
+\chname{Сидоров С.П.}  
 \patitle{} 
-\paname{}  
-
+\paname{}
 \term{} 
-
-\duration{} 
-
 \practStart{}  
 \practFinish{} 
-
 \year{2016}  
 \MakeTitle
-
-
-
 
 \setcounter{tocdepth}{1}
 
@@ -75,7 +57,7 @@
 \intro
 В данной курсовой работе будут представлены основные вопросы и положения теории квадратичных форм.
 
-Квадратичные формы очень важны и активно используются в таких областях как современная физика и математика.
+Квадратичные формы вида $Q(x)=\udsum{j=1}{n}{}\udsum{k=1}{n}{a_{jk}x_{j}x{k}}$ очень важны и активно используются в таких областях как современная физика и математика.
 
 В 628-м году индийский математик Брахмагупта написал \\ <<Brahmasphutasiddhanta>>, которое включало в себя уравнение вида $$x^2-ny^2=c.$$ Сейчас это уравнение называется уравнением Пелля и записывается в виде $$x^2-ny^2=1.$$ В Европе проблему решения этого уравнения изучали такие ученые как Эйлер, Лагранж, Браункер и многие другие. В частности, Лагранж в своих трудах значительно расширил теорию квадратичных форм изучая кривые второго порядка. В 1801 году Гаусс опубликовал <<Disquisitiones Arithmeticae>>, большая часть которого была посвещена  полной теории бинарных квадратичных форм над целыми числами. С тех пор эта концепция была обобщена, и связана с квадратичными числовыми полями, модулярным группами и другими областями математики.
 
@@ -87,7 +69,7 @@
 
 \textbf{Матрицей} называется прямоугольная таблица из чисел, содержащая некоторое количество $m$ строк и некоторое количество $n$ столбцов. Числа $m$ и $n$ называются порядками матрицы. В случае, если $m = n$, матрица называется квадратной, а число $m= n$ – ее порядком.
 
-\textbf{Определитель квадратной матрицы A} - некое число вида $$|A|=\det A=\begin{vmatrix}
+\textbf{Определитель квадратной матрицы A} $$|A|=\det A=\begin{vmatrix}
 a_{11} & a_{12} & \cdots & a_{1n} \\ 
 a_{21} & a_{22} & \cdots & a_{2n} \\ 
 \cdots \\
@@ -98,7 +80,9 @@ $$
 \textbf{Минор} $A \begin{bmatrix} \alpha_1 & \alpha_2 \dots \alpha_k \\ \beta_1 & \beta_2 \dots \beta_k \end{bmatrix}$ матрицы $A$ - определитель такой квадратной матрицы $B$ порядка $k$ (который называется также порядком этого минора), элементы которой стоят в матрице $A$ на пересечении строк с номерами $\alpha_1, \alpha_2 \dots \alpha_k$ и столбцов с номерами $\beta_1, \beta_2 \dots \beta_k$.\newline
 Если номера отмеченных строк совпадают с номерами отмеченных столбцов, то минор называется \textbf{главным}, а если отмечены первые $k$ строк и первые $k$ столбцов - \textbf{угловым} или \textbf{ведущим главным}.
 
-\textbf{Ранг матрицы} — наивысший из порядков миноров этой матрицы, определитель которых отличен от нуля.
+Несколько строк (столбцов) называются линейно независимыми, если ни одна из них не выражается линейно через другие. 
+
+\textbf{Рангом матрицы} $A$ с $m$ строк и $n$ столбцов называется максимальное число линейно независимых строк (столбцов). Ранг $rangM$ матрицы $M$ размера $m \times n$ называют полным, если $rangM = min(m,n)$.
 
 \textbf{Билинейной формой} называется функция $F:L \times L \to K$, линейная по каждому из аргументов, где $L$ есть векторное пространство над полем $K$: \\
 \tab $F(x+z,y)=F(x,y)+F(z,y)$ \\
@@ -127,8 +111,6 @@ $$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsu
 \tl
 2) Если матрица квадратичной формы имеет полный ранг, то квадратичную форму называют невырожденной, иначе - вырожденной.
 \tl
-(Рангом матрицы $A$ с $m$ строк и $n$ столбцов называется максимальное число линейно независимых строк (столбцов). Несколько строк (столбцов) называются линейно независимыми, если ни одна из них не выражается линейно через другие. Ранг $rangM$ матрицы $M$ размера $m \times n$ называют полным, если $rangM = min(m,n)$.)
-\tl
 3) Квадратичная форма A(x,x) называется положительно (отрицательно) определённой, если для любого $x \ne 0$ $A(x,x)> 0$ $(A(x,x)<0)$. Положительно определённые и отрицательно определённые формы называются знако-определёнными. 
 \tl
 Квадратичная форма является положительно определенной, тогда и только тогда, когда все угловые миноры её матрицы строго положительны.
@@ -139,6 +121,11 @@ $$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsu
 \tl
 5) Квадратичная форма $A(x,x)$ называется квазизнакоопределённой, если  $A(x,x) \ge 0 (A(x,x) \le 0)$ , но форма не является знакоопределённой.
 \tl
+6) Квадратичная форма $f(x_1,x_2,...,x_n)$ называется \textbf{канонической}, если она не содержит произведений различных переменных, т.е. $$f(x_1,x_2,...,x_n)=\udsum{i=1}{r}{a_{ii}x_i^2} (r \le n)$$
+\tl
+7) Каноническая квадратичная форма \textbf{называется нормальной} (или имеет нормальный вид), если $|a_n| = 1 ( i= 1, 2, . . . , r)$, т. е. отличные от нуля коэффициенты при квадратах переменных равны $+1$ или -$1$. 
+\tl
+
 Для приведения квадратичной формы к каноническому виду используется метод Лагранжа. Данный метод состоит в последовательном выделении в квадратичной форме полных квадратов. Возможны два случая:
 \tl
 1. Пусть $f_{11} \ne 0$. Выделим в $f(x_1,x_2,...x_n)$ все слагаемые, содержащие 
@@ -208,36 +195,114 @@ y_{n}
 
 Все вышеперечисленное в конечном итоге приводит нас к теореме:
 
-\textbf{Теорема 1.} Квадратичная форма $f(x_1, x_2,...,x_n)$ с матрицей $А$ линейным однородным преобразованием $Х = ВУ$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ с матрицей $C=B^{T}AB$.
+\textbf{Теорема 1.1.} Квадратичная форма $f(x_1, x_2,...,x_n)$ с матрицей $А$ линейным однородным преобразованием $Х = ВУ$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ с матрицей $C=B^{T}AB$.
 \tl
 \textbf{Следствие 1.} Определители матриц конгруэнтных невырожденных действительных квадратичных форм имеют одинаковые знаки.
 \tl
 \textbf{Следствие 2.} Конгруэнтные квадратичные формы имеют одинаковые ранги.
 
-\section{Приведение действительной квадратичной формы к нормальному виду}
-\tab Квадратичная форма $f(x_1,x_2,...,x_n)$ называется \textbf{канонической}, если она не содержит произведений различных переменных, т.е. $$f(x_1,x_2,...,x_n)=\udsum{i=1}{r}{a_{ii}x_i^2} (r \le n)$$
-\tl
-Каноническая квадратичная форма \textbf{называется нормальной} (или имеет нормальный вид), если $|a_n| = 1 ( i= 1, 2, . . . , r)$, т. е. отличные от нуля коэффициенты при квадратах переменных равны $+1$ или -$1$. 
-\tl
-Очень важным является возможность привести любую квадратичную форму к канонической. В этом нам помагает нижеследующие теоремы:
+\section{Ортогональное преобразование квадратичной формы к каноническому виду}
 
-\textbf{Теорема 2.} Любая квадратичная форма некоторым невырожденным линейным преобразованием может быть приведена к каноническому виду \newline $\phi(y_1,y_2,...,y_n)=b_{11}y_1^2+b_{22}y_2^2+...+b_{nn}y_n^2$ , где $y_1,y_2,...,y_n$ - новые переменные.
-\tl
-Некоторые из коэффициентов $b_{ij}$ могут оказаться равными нулю; число отличных от нуля коэффициентов в этой формуле равно рангу $r$ матрицы квадратичной формы $\phi$. 
+Для приведения квадратичной формы к каноническому виду существуюет достаточно простой метод, называемый методом Лагранжа.
 
-\textbf{Теорема 3.} Любую действительную квадратичную форму линейным невырожденным преобразованием можно привести к нормальному виду
+\textbf{Теорема 2.1 (Лагранжа).} Всякая квадратичная форма при помощи невырожденного линейного преобразования переменных может быть приведена к каноническому виду. 
 
-$\psi(z_1,z_2,...,z_n)=z_1^2+z_2^2+...+z_{k-1}^2-z_k^2-...-z_r^2$
-Число входящих сюда квадратов равно рангу формы.
+
+Этот метод, однако, во многих задачах не дает нужного результата. Например, в задачах аналитической геометрии часто требуется привести общее уравнение кривой или поверхности второго порядка к каноническому виду, причем такое приведение требуется осуществить с помощью весьма специального преобразования переменных. Метод Лагранжа не всегда обеспечивает это условие в отличии от способа основанном на отыскании собственных значений матрицы квадратичной формы. 
+
+
+\textbf{Теорема 2.2.} Всякая квадратичная форма с матрицей $А$ может быть приведена к каноническому виду 
+$$ \lambda_1y_1^2+\lambda_2y_2^2+\dots + \lambda_ny_n^2$$
+при помощи преобразования переменных с ортогональной матрицей. При этом коэффициенты $ \lambda_k $ канонического вида являются корнями характеристического многочлена матрицы $A$ каждый из которых взят столько раз, какова его кратность. 
+
+Из теоремы 4 можно указать практическую схему для отыскания ортогонального преобразования переменных, в результате которого квадратичная форма принимает канонический вид, или, что то же, ее матрица заменяется на диагональную. 
+
+1-й шаг. Для данной квадратичной формы строим ее симметрическую матрицу $A$.
+
+2-й шаг. Составляем характеристический многочлен $\Delta(\lambda) = |A - \lambda\cdot E|$ и находим его корни. Обозначим корни характеристического многочлена через $\lambda_1, \lambda_2, \dots, \lambda_n.$
+
+3-й шаг. Зная корни характеристического многочлена $\Delta(\lambda)$ можно написать канонический вид данной квадратичной формы: 
+$$ 	\tilde{f}=\lambda_1y_1^2+\lambda_2y_2^2+\dots, + \lambda_ny_n^2 $$
+
+4-й шаг. Для каждого корня $\lambda_i$ кратности $m_i$ составляем однородную систему линейных уравнений: 
+
+$$
+\begin{cases} 
+(a_{11}-\lambda_i)\zeta_1 + a_{12}\zeta_2 + \dots + a_{1n}\zeta_n = 0 \\ 
+a_{21}\zeta_1 + (a_{12}-\lambda_i)\zeta_2 + \dots + a_{1n}\zeta_n = 0 \\
+\dots \\
+a_{n1}\zeta_1 + a_{12}\zeta_2 + \dots + (a_{1n}-\lambda_i)\zeta_n = 0
+\end{cases} \eqno(5.1)
+$$
+
+где $a_{ij}$ - элементы матрицы $A$.
+
+5-й шаг. Для каждого $\lambda_i$ кратности $m_i$ находим какую-нибудь одну ортонормированную систему из $m_i$ векторов, являющихся решениями системы (5.1). Индекс $i$ меняется от $1$ до $k$ где $k$ есть число различных корней характеристического многочлена $\Delta(\lambda)$. Т.о. получим $n$ попарно ортогональных нормированных векторов: 
+$$e_1^{'}=(q_{11}, q_{21}, \dots, q_{n1}),$$
+$$e_2^{'}=(q_{12}, q_{22}, \dots, q_{n2}),$$
+$$\dots,$$
+$$e_n^{'}=(q_{1n}, q_{2n}, \dots, q_{nn})$$
+
+(Порядок следования векторов $e_1^{'}, e_2^{'}, \dots, e_n^{'}$ соответствует порядку $\lambda_i$ в каноническом виде.) 
+
+6-й шаг. Составляем матрицу $Q$ столбцами которой являются координаты векторов $e_1^{'}, e_2^{'}, \dots, e_n^{'}$:
+
+$$Q = \begin{pmatrix}
+q_{11} & q_{12} & \cdots & q_{1n} \\
+q_{21} & q_{22} & \cdots & q_{2n} \\        
+\vdots & \vdots & \ddots & \vdots \\
+q_{n1} & q_{n2} & \cdots & q_{nn}
+\end{pmatrix}$$
+
+7-й шаг. Записываем искомое ортогональное преобразование \mbox{переменных}: 
+
+$$
+\begin{cases} 
+x_1 = q_{11}y_1 + q_{12}y_2 + \dots + q_{1n}y_n \\ 
+x_2 = q_{21}y_1 + q_{22}y_2 + \dots + q_{2n}y_n \\
+\dots \\
+x_n = q_{n1}y_1 + q_{n2}y_2 + \dots + q_{nn}y_n
+\end{cases}
+$$
+
+т.е.
+
+$$\begin{pmatrix}
+x_{1}  \\
+x_{2} \\        
+\vdots \\
+x_{n}
+\end{pmatrix} = Q^{'}\cdot\begin{pmatrix}
+y_{1}  \\
+y_{2} \\        
+\vdots \\
+y_{n}
+\end{pmatrix}$$
+
+8-й шаг. Если требуется выразить новые переменные $y_1, y_2, \dots, y_n$ через старые $x_1, x_2, \dots, x_n$ то, учитывая, что $Q^{-1} = Q^{'}$ получаем: 
+
+$$Q^{'}\cdot\begin{pmatrix}
+x_{1}  \\
+x_{2} \\        
+\vdots \\
+x_{n}
+\end{pmatrix} = \begin{pmatrix}
+y_{1}  \\
+y_{2} \\        
+\vdots \\
+y_{n}
+\end{pmatrix}$$
+
+Замечание. В случае правильности полученного результата должно быть $B=Q^{'}AQ$, где $B$ — диагональная матрица, отвечающая форме $\tilde{f}$ Отметим еще, что в связи с неоднозначностью отыскания фундаментальной системы решений однородной линейной системы (5-й шаг) ортогональное преобразование переменных будет находиться также неоднозначно.
 
 \section{Закон инерции квадратичных форм}
 \tabЗакон инерции квадратичных форм выражает:
 \tl
-\textbf{Теорема 4.} Число положительных и число отрицательных квадратов в нормальном виде, к которому приводится данная действительная квадратичная форма невырожденным действительным линейным преобразованием, не зависит от выбора преобразования.
+\textbf{Теорема 6.1.} Число положительных и число отрицательных квадратов в нормальном виде, к которому приводится данная действительная квадратичная форма невырожденным действительным линейным преобразованием, не зависит от выбора преобразования.
 \tl
 Число положительных квадратов в нормальной форме, к которой приводится данная действительная квадратичная форма, называют \textbf{положительным индексом инерции} этой формы, число отрицательных квадратов - \textbf{отрицательным индексом инерции}, разность между положительным и отрицательным индексами инерции - \textbf{сигнатурой формы} $f$. Если известен ранг формы, то задание любого из трех указанных выше чисел определяет два других.
 \tl
-\textbf{Теорема 5.} Две действительные квадратичные формы от $n$ переменных тогда и только тогда конгруэнтны, когда они имеют одинаковые ранги и одинаковые сигнатуры.
+\textbf{Теорема 6.2.} Две действительные квадратичные формы от $n$ переменных тогда и только тогда конгруэнтны, когда они имеют одинаковые ранги и одинаковые сигнатуры.
 матрица квадратичный переменный
 
 
@@ -247,7 +312,7 @@ $$\phi(y_1,y_2, … ,y_n)=y_1^2+y_2^2+…+y_n^2$$ т.е. если ранг и п
 \tl
 Систему значений $x_1,x_2…,x_n$ назовем нулевой, если $x_1 = х_2 = ... = x_n = 0$, и ненулевой, если хотя бы одно из них отлично от нуля.
 \tl
-\textbf{Теорема 6.} Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$.
+\textbf{Теорема 7.1.} Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$.
 \tl Пусть дана квадратичная форма $f(x_1,x_2…,x_n)$ с матрицей $A = (ay)$. Главными минорами квадратичной формы $f$ называются миноры  
 $$a_{11}, 
 \begin{vmatrix}
@@ -274,12 +339,12 @@ a_{n1} & a_{n2} & \cdots & a_{nn} \\
 $$
 \tab т.е. миноры порядка $1, 2, ... , n$ матрицы $А$, расположенные в левом верхнем углу; последний из них совпадает с определителем матрицы.
 \tl
-\textbf{Теорема 7.} Квадратичная форма $f(x_1,x_2…,x_n)$ с действительной матрицей является положительно-определенной тогда и только тогда, когда все ее главные миноры положительны.
+\textbf{Теорема 7.2.} Квадратичная форма $f(x_1,x_2…,x_n)$ с действительной матрицей является положительно-определенной тогда и только тогда, когда все ее главные миноры положительны.
 \tl
 Действительная квадратичная форма называется отрицательно-определенной, если она является невырожденной и приводится к нормальному виду, содержащему только отрицательные квадраты всех переменных; эту форму можно привести к виду:
 $\phi(y_1,y_2….y_n)= -y_{1}^2-y_{2}^2 -…- y_{n}^2$
 \tl
-\textbf{Теорема 8.} Квадратичная форма является отрицательно-определенной тогда и только тогда, когда ее главные миноры четного порядка положительны, а нечетного - отрицательны.
+\textbf{Теорема 7.3.} Квадратичная форма является отрицательно-определенной тогда и только тогда, когда ее главные миноры четного порядка положительны, а нечетного - отрицательны.
 \tl
 Положительно-определенные и отрицательно-определенные квадратичные формы называются \textbf{знакоопределенными квадратичными формами}.
 \tl
@@ -335,6 +400,8 @@ dy_1&dy_2
 Виноградов И.М. Элементы высшей математики. (Аналитическая геометрия. Дифференциальное исчисление. Основы теории чисел). Учебник для вузов. – М.: Высш. шк., 1999.
 \bibitem{2}
 Гусак А.А., Гусак Г.М., Бричикова Е.А. Справочник по высшей математике. - Мн.: ТетраСистемс, 1999. - 640с. 
+\bibitem{2.1}
+Громов А. П. Учебное пособие по линейной алгебре. - М: Изд-во "Просвещение", 1971 г. 
 \bibitem{3}
 Крамер Г. Математические методы статистики. – М.: Регулярная и хаотическая динамика, 2003. 
 \bibitem{4}
