--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -64,9 +64,9 @@
 
 \section{Основные понятия и определения}
 
-\textbf{Базис} - набор $n$ векторов в $n-$мерном линейном пространстве, таких, что любой вектор пространства может быть представлен в виде некоторой их линейной комбинации, при этом ни один из базисных векторов не представим в виде линейной комбинации остальных. \cite{8}
+\textbf{Базис} - набор $n$ векторов в $n-$мерном линейном пространстве, таких, что любой вектор пространства может быть представлен в виде некоторой их линейной комбинации, при этом ни один из базисных векторов не представим в виде линейной комбинации остальных. \cite{1}
 
-\textbf{Матрицей} называется прямоугольная таблица из чисел, содержащая некоторое количество $m$ строк и некоторое количество $n$ столбцов. Числа $m$ и $n$ называются порядками матрицы. В случае, если $m = n$, матрица называется квадратной, а число $m= n$ – ее порядком. \cite{9}
+\textbf{Матрицей} называется прямоугольная таблица из чисел, содержащая некоторое количество $m$ строк и некоторое количество $n$ столбцов. Числа $m$ и $n$ называются порядками матрицы. В случае, если $m = n$, матрица называется квадратной, а число $m= n$ – ее порядком. \cite{2}
 
 \textbf{Определитель квадратной матрицы A} $$|A|=\det A=\begin{vmatrix}
 a_{11} & a_{12} & \cdots & a_{1n} \\ 
@@ -76,21 +76,21 @@ a_{n1} & a_{n2} & \cdots & a_{nn} \\
 \end{vmatrix}
 $$
 
-\textbf{Минор} $A \begin{bmatrix} \alpha_1 & \alpha_2 \dots \alpha_k \\ \beta_1 & \beta_2 \dots \beta_k \end{bmatrix}$ матрицы $A$ - определитель такой квадратной матрицы $B$ порядка $k$ (который называется также порядком этого минора), элементы которой стоят в матрице $A$ на пересечении строк с номерами $\alpha_1, \alpha_2 \dots \alpha_k$ и столбцов с номерами $\beta_1, \beta_2 \dots \beta_k$. Если номера отмеченных строк совпадают с номерами отмеченных столбцов, то минор называется \textbf{главным}, а если отмечены первые $k$ строк и первые $k$ столбцов - \textbf{угловым} или \textbf{ведущим главным}. \cite{10}
+\textbf{Минор} $A \begin{bmatrix} \alpha_1 & \alpha_2 \dots \alpha_k \\ \beta_1 & \beta_2 \dots \beta_k \end{bmatrix}$ матрицы $A$ - определитель такой квадратной матрицы $B$ порядка $k$ (который называется также порядком этого минора), элементы которой стоят в матрице $A$ на пересечении строк с номерами $\alpha_1, \alpha_2 \dots \alpha_k$ и столбцов с номерами $\beta_1, \beta_2 \dots \beta_k$. Если номера отмеченных строк совпадают с номерами отмеченных столбцов, то минор называется \textbf{главным}, а если отмечены первые $k$ строк и первые $k$ столбцов - \textbf{угловым} или \textbf{ведущим главным}. \cite{3}
 
-Несколько строк (столбцов) называются линейно независимыми, если ни одна из них не выражается линейно через другие. \cite{11}
+Несколько строк (столбцов) называются линейно независимыми, если ни одна из них не выражается линейно через другие. \cite{4}
 
-\textbf{Рангом матрицы} $A$ с $m$ строк и $n$ столбцов называется максимальное число линейно независимых строк (столбцов). Ранг $rangM$ матрицы $M$ размера $m \times n$ называют полным, если $rangM = min(m,n)$. \cite{11}
+\textbf{Рангом матрицы} $A$ с $m$ строк и $n$ столбцов называется максимальное число линейно независимых строк (столбцов). Ранг $rangM$ матрицы $M$ размера $m \times n$ называют полным, если $rangM = min(m,n)$. \cite{4}
 
 \textbf{Билинейной формой} называется функция $F:L \times L \to K$, линейная по каждому из аргументов, где $L$ есть векторное пространство над полем $K$: \\
 \tab $F(x+z,y)=F(x,y)+F(z,y)$ \\
 \tab $F(x,y+z)=F(x,y)+F(x,z)$ \\
-\tab $F(\lambda x,y)= F(x,\lambda y) = \lambda F(x,y)$, здесь $x,y,\in L$ и $\lambda \in K$ \cite{12}
+\tab $F(\lambda x,y)= F(x,\lambda y) = \lambda F(x,y)$, здесь $x,y,\in L$ и $\lambda \in K$ \cite{5}
 
 
 \section{Квадратичная форма и ее свойства}
 
-\tab \textbf{Квадратичной формой над множеством $\mathds{a}$} называют однородный полином второй степени с коэффициентами из $\mathds{a}$; \cite{13}
+\tab \textbf{Квадратичной формой над множеством $\mathds{a}$} называют однородный полином второй степени с коэффициентами из $\mathds{a}$; \cite{6}
 \tl
 (Полином (многочлен) $F(x_1,x_2,...,x_l)$ называется \textbf{однородным} полиномом или формой степени (или порядка) $m$, если все его одночлены имеют степень $m$. Однородный полином первого, второго или третьего порядков называют также, соответственно, линейной, квадратичной или кубической формой.)
 \tl
@@ -144,7 +144,7 @@ a_{21} & a_{22} & \cdots & a_{2n} \\
 a_{n1} & a_{n2} & \cdots & a_{nn}
 \end{pmatrix}\eqno(1.2)$$
 
-где $a_{ij}=f_{ij}$
+где $a_{ij}=f_{ij}$ \cite{gusak}
 \tl
 И наоборот, всякой симметрической матрице соответствует единственная квадратичная форма с точностью до обозначения переменных.
 \tl
@@ -310,7 +310,7 @@ $$\phi(y_1,y_2, … ,y_n)=y_1^2+y_2^2+…+y_n^2$$ т.е. если ранг и п
 \tl
 Систему значений $x_1,x_2…,x_n$ назовем нулевой, если $x_1 = х_2 = ... = x_n = 0$, и ненулевой, если хотя бы одно из них отлично от нуля.
 \tl
-\textbf{Теорема 7.1.} Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$.
+\textbf{Теорема 7.1.} Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$. \cite{berezina}
 \tl Пусть дана квадратичная форма $f(x_1,x_2…,x_n)$ с матрицей $A = (ay)$. Главными минорами квадратичной формы $f$ называются миноры  
 $$a_{11}, 
 \begin{vmatrix}
@@ -342,11 +342,11 @@ $$
 Действительная квадратичная форма называется отрицательно-определенной, если она является невырожденной и приводится к нормальному виду, содержащему только отрицательные квадраты всех переменных; эту форму можно привести к виду:
 $\phi(y_1,y_2….y_n)= -y_{1}^2-y_{2}^2 -…- y_{n}^2$
 \tl
-\textbf{Теорема 7.3.} Квадратичная форма является отрицательно-определенной тогда и только тогда, когда ее главные миноры четного порядка положительны, а нечетного - отрицательны.
+\textbf{Теорема 7.3.} Квадратичная форма является отрицательно-определенной тогда и только тогда, когда ее главные миноры четного порядка положительны, а нечетного - отрицательны. \cite{berezina}
 \tl
 Положительно-определенные и отрицательно-определенные квадратичные формы называются \textbf{знакоопределенными квадратичными формами}.
 \tl
-Вырожденные квадратичные формы, нормальный вид которых состоит из квадратов одного знака, называются \textbf{полуопределенными}. \textbf{Неопределенными} называются квадратичные формы, нормальный вид которых содержит как положительные, так и отрицательные квадраты переменных.
+Вырожденные квадратичные формы, нормальный вид которых состоит из квадратов одного знака, называются \textbf{полуопределенными}. \textbf{Неопределенными} называются квадратичные формы, нормальный вид которых содержит как положительные, так и отрицательные квадраты переменных. \cite{berezina}
 
 \section{Примеры использования}
 \tab \textbf{Пример 1.} Найти второй дифференциал сложной функции $z(y)=f(x(y))$, где $x(y)=Sy$, в окрестности некоторого фиксированного значения векторного аргумента $y0$, если известны матрица Гессе, вычисленная при $x=x0=Sy0$, и матрица $S$
@@ -394,39 +394,53 @@ dy_1&dy_2
 \begin{pmatrix}dy_1\\dy_2\end{pmatrix}= 4dy_1^2+20dy_1dy_2+25dy_2^2.$$
 
 \conclusion
-НАПИСАТЬ ЗАКЛЮЧЕНИ
+В ходе написания данного курсового проекта были подробно рассмотрены основные вопросы и положения теории квадратичный форм.
+\tl
+При написании курсовой работы была изучена специальная литература, включающая научные статьи по теории квадратичных форм, учебники по линейной алгебре, рассмотрено практическое применение квадратичных форм в приложениях.
 
 \begin{thebibliography}{00} % Список литературы
 \bibitem{1}
-Виноградов И.М. Элементы высшей математики. (Аналитическая геометрия. Дифференциальное исчисление. Основы теории чисел). Учебник для вузов. – М.: Высш. шк., 1999.
+Mathmetod [Электронный ресурс]:\\
+URL: \href{http://mathmetod.wikispaces.com/Базис}{http://mathmetod.wikispaces.com/Базис} \\ (дата обращения 03.05.2016).
 \bibitem{2}
-Гусак А.А., Гусак Г.М., Бричикова Е.А. Справочник по высшей математике. - Мн.: ТетраСистемс, 1999. - 640с. 
-\bibitem{2.1}
-Громов А. П. Учебное пособие по линейной алгебре. - М: Изд-во "Просвещение", 1971 г. 
+100formul [Электронный ресурс]:\\
+URL: \href{ttp://100formul.ru/matrix1}{ttp://100formul.ru/matrix1} 
+\\ (дата обращения 04.05.2016).
 \bibitem{3}
-Крамер Г. Математические методы статистики. – М.: Регулярная и хаотическая динамика, 2003. 
+Википедия [Электронный ресурс]:\\
+URL: \href{https://goo.gl/d9FnPw}{https://goo.gl/d9FnPw}
+\\ (дата обращения 02.05.2016).
 \bibitem{4}
-Ильин В.А., Позняк Э.Г. Линейная алгебра. - М.: Наука, 1999
+Википедия [Электронный ресурс]:\\
+URL: \href{https://goo.gl/EzDACj}{https://goo.gl/EzDACj}
+\\ (дата обращения 04.05.2016).
 \bibitem{5}
-Eva Bayer-Fluckiger David Lewis, Andrew Ranicki. Quadratic Forms and Their Applications - Published as Contemporary Mathematics 272, A.M.S. (2000)
+Википедия [Электронный ресурс]:\\
+URL: \href{https://goo.gl/pASYNq}{https://goo.gl/pASYNq}
+\\ (дата обращения 05.05.2016).
 \bibitem{6}
+http://pmpu.ru [Электронный ресурс]:\\
+URL: \href{http://pmpu.ru/vf4/2form}{http://pmpu.ru/vf4/2form}
+\\ (дата обращения 04.05.2016).
+\bibitem{s}
+Виноградов И.М. Элементы высшей математики. (Аналитическая геометрия. Дифференциальное исчисление. Основы теории чисел). Учебник для вузов. – М.: Высш. шк., 1999. - 511c.
+\bibitem{gusak}
+Гусак А.А., Гусак Г.М., Бричикова Е.А. Справочник по высшей математике. - Мн.: ТетраСистемс, 1999. - 640с. 
+\bibitem{berezena}
+Березина Н. Линейная алгебра. Конспект лекций. - М.: Эксмо, 2007. - 128c.
+\bibitem{2.1}
+Громов А. П. Учебное пособие по линейной алгебре. - М: Изд-во "Просвещение", 1971. - 128c.
+\bibitem{asa}
+Крамер Г. Математические методы статистики. – М.: Регулярная и хаотическая динамика, 2003. - 648c.
+\bibitem{asa}
+Ильин В.А., Позняк Э.Г. Линейная алгебра. - М.: Наука, 1999. - 280c.
+\bibitem{kk}
 Квадратичные формы [Электронный ресурс]:\\
 URL: \href{http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy}{http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy} (дата обращения 12.04.2016).
 \bibitem{7}
 Квадратичные формы [Электронный ресурс]:\\
 URL: \href{https://en.wikipedia.org/wiki/Quadratic\underline{ }form}{https://en.wikipedia.org/wiki/Quadratic\underline{ }form} \\ (дата обращения 01.05.2016).
-\bibitem{8}
-http://mathmetod.wikispaces.com/Базис
-\bibitem{9}
-http://100formul.ru/matrix1
-\bibitem{10}
-https://goo.gl/d9FnPw
-\bibitem{11}
-https://goo.gl/EzDACj
-\bibitem{12}
-https://goo.gl/pASYNq
-\bibitem{13}
-http://pmpu.ru/vf4/2form
+
 \end{thebibliography}
 
 \end{document}
